[feat] #32. 게시글과 댓글 연관관계 맵핑
- BoardEntity 및 Service 오타 수정